[package]
name = "jiv2"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
image = "0.25"
crossterm = "0.28"

[[bin]]
name = "sextant"
path = "src/sextant.rs"

[[bin]]
name = "quadrant"
path = "src/quadrant.rs"

[[bin]]
name = "braille"
path = "src/braille.rs"